<resources>
    <!--Title Name-->
    <string name="app_name">Stargazing</string>
    <string name="focal_calc_title">Focal Length and Ratio Calculators</string>
    <string name="magnification_calc_title">Magnification Calculators</string>
    <string name="field_of_view_calc_title">Field of View Calculators</string>
    <string name="telescope_capabilities_calc_title">Telescope Capabilities Calculators</string>
    <string name="binocular_calc_title">Binocular Calculators</string>
    <string name="ccd_calc_title">CCD Calculators</string>
    <string name="ccd_telescope_combination_calc_title">CCD-Telescope Combination Calculator</string>
    <string name="ccd_filter_size_calc_title">CCD Filter Size Calculator</string>
    <string name="imaging_guiding_ratio_calc_title">Imaging-Guiding Ratio Calculator</string>
    <string name="unit_converter_title">Unit Converter</string>
    <string name="weather_forecast_title">Weather Forecast</string>
    <string name="red_light_tool_title">Red Light</string>
    <string name="obs_log_book_title">Observation Log Book</string>
    <string name="about_title">About</string>
    <string name="credit_and_data_source_title">Credit and Data Source</string>
    <string name="privacy_policy_title">Privacy Policy</string>

    <!--Another String Values-->
    <string name="privacy_police">
        At Stargazing, one of our main priorities is the privacy of our visitors. This Privacy Policy document contains types of information that is collected and recorded by Stargazing and how we use it.
    </string>
    <string name="log_files">
        Stargazing follows a standard procedure of using log files. These files log visitors when they use app. The information collected by log files include internet protocol (IP) addresses, browser type, Internet Service Provider (ISP),Current Location (GPS), date and time stamp, referring/exit pages, and possibly the number of clicks. These are not linked to any information that is personally identifiable. The purpose of the information is for analyzing trends, administering the app, tracking users, movement on the app, and gathering demographic information.
    </string>
    <string name="advertising">
        Some of advertisers in our app may use cookies and web beacons. Each of our advertising partners has their own Privacy Policy for their policies on user data. For easier access.
    </string>
    <string name="third_party_advertisers">
        You may consult this list to find the Privacy Policy for each of the advertising partners of Stargazing.
Third-party ad servers or ad networks uses technologies like cookies, JavaScript, or Beacons that are used in their respective advertisements and links that appear on Stargazing. They automatically receive your IP address when this occurs. These technologies are used to measure the effectiveness of their advertising campaigns and/or to personalize the advertising content that you see on this app or other apps or websites.
Note that Stargazing has no access to or control over these cookies that are used by third-party advertisers.
    </string>
    <string name="children_information">
        Another part of our priority is adding protection for children while using the internet. We encourage parents and guardians to observe, participate in, and/or monitor and guide their online activity.
Stargazing does not knowingly collect any Personal Identifiable Information from children under the age of 13. If you think that your child provided this kind of information on our App, we strongly encourage you to contact us immediately and we will do our best efforts to promptly remove such information from our records.
    </string>
    <string name="online_only">
        This Privacy Policy applies only to our online activities and is valid for visitors to our App with regards to the information that they shared and/or collect in Stargazing. This policy is not applicable to any information collected offline or via channels other than this app. Our Privacy Policy was created with the help of the App Privacy Policy Generator from <a href="https://App-Privacy-Policy.com">App-Privacy-Policy.com</a>
    </string>
    <string name="consent">
        By using our app, you hereby consent to our Privacy Policy and agree to its Terms and Conditions.
    </string>
    <string name="about_text">Stargazing is an app to help make planning your astronomical observations or astrophotography easier.
there are various calculators for calculating telescope and camera parameters, weather forecasts, an observation log book, and a handy unit converter.
</string>
    <string name="tv_magnification_value">Magnification Value</string>
    <string name="eyepiece_fl_value">Eyepiece F Length Value</string>
    <string name="telescope_fl">Telescope F Length</string>
    <string name="true_fov">True Field of View Value</string>
    <string name="e_g_john_doe">e.g John Doe</string>
    <string name="observation_log_book">Observation Log Book</string>
    <string name="object_name">Object Name :</string>
    <string name="e_g_moon_mars_stars_etc">e.g Moon, Mars, Stars, etc</string>
    <string name="observer">Observer :</string>
    <string name="coordinate">Coordinate :</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="date">Date :</string>
    <string name="ddmmyyyy">DDMMYYYY</string>
    <string name="time">Time :</string>
    <string name="save_log_book">Save Log Book</string>
    <string name="description_of_object">Description of Object</string>
    <string name="comment">Comment :</string>
    <string name="e_g_original_soft_warm_etc">e.g Original, soft, Warm etc</string>
    <string name="filter">Filter:</string>
    <string name="e_g_100x_200x_etc">e.g 100x, 200x, etc</string>
    <string name="magnification">Magnification :</string>
    <string name="e_g_telescope_camera_etc">e.g Telescope, Camera, Etc</string>
    <string name="instrument">Instrument:</string>
    <string name="seeing_very_poor">Very Poor</string>
    <string name="seeing_poor">Poor</string>
    <string name="seeing_ok">OK</string>
    <string name="seeing_good">Good</string>
    <string name="seeing_excellent">Exceptional</string>
    <string name="_00_00">00:00</string>
    <string name="credit_list">Weather forecast by <a href="https://www.windy.com">Windy.com</a> \nApp icon created by <a href="https://www.flaticon.com/free-icons/telescope" title="telescope icons">iconixar</a> \n App Privacy Policy Generator from <a href="https://App-Privacy-Policy.com">App-Privacy-Policy.com</a></string>
    <string-array name="ccd_binning">
        <item>1x1</item>
        <item>2x2</item>
        <item>3x3</item>
        <item>4x4</item>
        <item>5x5</item>
    </string-array>
    <string-array name="barlow_reducer">
        <item>None</item>
        <item>0.33</item>
        <item>0.4</item>
        <item>0.5</item>
        <item>0.63</item>
        <item>0.67</item>
        <item>0.7</item>
        <item>0.72</item>
        <item>0.73</item>
        <item>0.8</item>
        <item>0.85</item>
        <item>1.15</item>
        <item>1.5</item>
        <item>1.6</item>
        <item>2</item>
        <item>2.25</item>
        <item>2.5</item>
        <item>2.75</item>
        <item>3</item>
        <item>4</item>
        <item>4.2</item>
        <item>5</item>
    </string-array>
    <string-array name="Seeing">
        <item>Exceptional (0.5–1" FWHM)</item>
        <item>Good (1–2" FWHM)</item>
        <item>OK (2–4" FWHM)</item>
        <item>Poor (4–5" FWHM)</item>
        <item>Very Poor (5–6" FWHM)</item>
    </string-array>
    <!--SplashScreen ads-->
    <string name="ad_id_splash">testd7c5cewoj6</string>
    <string name="ad_id_splash_landscape">testq6zq98hecj</string>
    <string name="copyright_info">Copyright 2022. Version 1.0.1</string>
    <string name="status_load_ad_success">Ad loading state: loaded successfully.</string>
    <string name="status_load_ad_fail">Ad loading state: failed to be loaded. Error code: </string>
    <string name="status_ad_dismissed">Ad is dismissed.</string>
    <string name="submit" />


</resources>